--- a/trunk/manifest.json.in
+++ b/trunk/manifest.json.in
@@ -9,7 +9,8 @@
             "desktop":  "webtoonsapp.desktop"
         }
     },
-    "version": "1.2",
+    "version": "1.3",
     "maintainer": "Stefan Kalb <stefan.kalb@gmx.ch>",
-    "framework" : "ubuntu-sdk-16.04.5"
+    "framework" : "ubuntu-sdk-16.04.5",
+    "architecture": "all"
 }
